# svg2svelte

./: .gitignore  README.md  pyproject.toml
svg_to_svelte/: converter.py
