[tool.poetry]
name = "svg2svelte"
version = "0.1.0"
description = "Converts a SVG file into a Svelte file."
authors = ["Demetrius Panovitch <demetrius.mp789@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "@latest"
isort = "@latest"
flake8 = "@latest"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
